# SigClient

./: README.md
ROSSH/: CHANGELOG  CMakeLists.txt  Reset  mainpage.dox  manifest.xml  setAerial  setFreq  setFreqs  setManual  setPort  setPulse  setTolerance
ROSSH/include/dcc/: DCCTCP.h  dccmsg.h  keymap.h  protocol.h
ROSSH/launch/: null.launch  one.launch  three.launch  two.launch  zero.launch
ROSSH/msg/: History.msg  RosDccData.msg  RosDccPulseData.msg
ROSSH/src/cpp/: dcc_tcp.cpp  dccmsg.cpp  faker.cpp  filteredsampler.cpp  input.cpp  receiver.cpp  roshost.cpp  roshostsingle.cpp  sampler.cpp  sendack.cpp  setfreq.cpp  setgain.cpp  split.cpp  strtest.cpp  zero.cpp
ROSSH/src/firmware/: dccRobostix.c
ROSSH/src/rsn/dcc/: DccData.java  DccNode.java  DccParams.java  ROSParams.java  SerialUtils.java
ROSSH/srv/: Aerial.srv  ClearFreq.srv  FreqChange.srv  PulseRate.srv
windows/: Makefile
windows/include/: BB60APIW32.h
windows/include/network/: protocol.h
windows/lib/: BB60APIW32.lib
windows/src/: SigClient.cpp
